<resources>
    <string name="app_name">Shedule</string>
    <string name="text_name">Введите имя...</string>
    <string name="next">Продолжить</string>
    <string name="skip">Пропустить</string>
    <string name="change_name">Изменить имя</string>
    <string name="change_language">Изменить язык</string>
    <string name="feedback">Связь с разработчиком</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="note_number_one">Заметка номер один...</string>
    <string name="start_writing">Начните писать...</string>
    <string name="standard_user_name">Пользователь</string>
    <string name="standard_user_name_and_comma">Пользователь,</string>
    <string name="incorrect_name">Поле может содержать только буквы, цифры и знак подчеркивания</string>
    <string name="dayInput">Ввод</string>
    <string name="breaks">Звонки</string>
    <string name="schedule">Расписание</string>
    <string name="notes">Заметки</string>
    <string name="settings">Настройки</string>
    <string name="hello">Привет!</string>
    <string name="example_title" translatable="false">Example title</string>
    <string name="example_text" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</string>
    <string name="name">Имя</string>
    <string name="credit">Разработка: Гриценко Ярослав\nДизайн: София Немцева\n\nyaroslaw.gritsencko@gmail.com\nnemtseva.sofa12@gmail.com</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="english" translatable="false">English</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>
</resources>